samples/_failures_safe/1761503651_65fe8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_980963f9.c: In function ‘main’:
./samples/SAFE/__tmp_980963f9.c:153:17: error: expected expression at end of input
  153 |                 } else
      |                 ^
./samples/SAFE/__tmp_980963f9.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_980963f9.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_980963f9.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_980963f9.c:153:17: error: expected declaration or statement at end of input
